--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -10,8 +10,8 @@ log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 log4j.logger.MISSConsultLog=ERROR,syndomBpmAppender
 log4j.appender.syndomBpmAppender=org.apache.log4j.RollingFileAppender 
 
-#king log4j.appender.syndomBpmAppender.File=/home/pwirun/app/Chandra/logs/eduqa_services.log
-log4j.appender.syndomBpmAppender.File=/home/kosit/log/eduqa_services.log
+log4j.appender.syndomBpmAppender.File=/home/pwirun/app/Chandra/logs/eduqa_services.log
+#log4j.appender.syndomBpmAppender.File=/home/kosit/log/eduqa_services.log
 #log4j.appender.syndomBpmAppender.File=C:\\Users\\Administrator\\My Servers\\QIS\\logs\\eduqa_services.log
 
 log4j.appender.syndomBpmAppender.MaxFileSize=512KB
